2014-05-31  Holger Seelig  <holger.seelig@yahoo.de>

	* jsContext.cpp: 

2014-05-31  Holger Seelig  <holger.seelig@yahoo.de>

	* Grammar.cpp:
	* SpiderMonkey.h:
	* SpiderMonkey.cpp:
	* Script.cpp:
	* pbParser.h:
	* jsContext.h:
	* pbParser.cpp:
	* jsContext.cpp: 

2014-05-30  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBrowser.cpp: 

2014-05-30  Holger Seelig  <holger.seelig@yahoo.de>

	* pbParser.h:
	* pbParser.cpp: 

2014-05-30  Holger Seelig  <holger.seelig@yahoo.de>

	* Makefile.am:
	* libtitania-x3d.cproj:
	* pbParser.h:
	* pbParser.h:
	* pbParser.cpp:
	* pbParser.cpp:
	* X3DPointingDeviceSensorContext.h:
	* X3DPointingDeviceSensorContext.cpp: 

2014-05-30  Holger Seelig  <holger.seelig@yahoo.de>

	* World.cpp:
	* X3DRenderer.h:
	* X3DRenderer.cpp:
	* ShapeContainer.cpp:
	* LayerSet.h:
	* Script.cpp:
	* RenderingProperties.cpp:
	* TransformTool.cpp:
	* LayerSet.cpp:
	* jsContext.h:
	* X3DLayerNode.cpp:
	* jsContext.cpp:
	* X3DPointingDeviceSensorContext.cpp: 

2014-05-30  Holger Seelig  <holger.seelig@yahoo.de>

	* SpiderMonkey.h:
	* SpiderMonkey.cpp:
	* Script.cpp:
	* X3DJavaScriptEngine.h:
	* jsContext.h:
	* jsContext.cpp: 

2014-05-29  Holger Seelig  <holger.seelig@yahoo.de>

	* Parser.cpp:
	* Selection.h:
	* Selection.cpp:
	* X3DBaseNode.cpp:
	* X3DFieldDefinition.h:
	* ProtoDeclaration.cpp:
	* EnvironmentalSensor.x3dv:
	* X3DPrototypeInstance.cpp: 

2014-05-29  Holger Seelig  <holger.seelig@yahoo.de>

	* libtitania-x3d.cproj:
	* World.cpp:
	* X3DBaseNode.cpp:
	* Selection.cpp:
	* X3DBaseTool.h:
	* TransformTool.x3dv:
	* EnvironmentalSensor.x3dv:
	* BooleanSwitch.x3dv:
	* X3DLayerNode.cpp:
	* X3DEnvironmentalSensorNodeTool.h: 

2014-05-29  Holger Seelig  <holger.seelig@yahoo.de>

	* Keys.cpp:
	* TransformTool.x3dv:
	* TransformTool.cpp:
	* KeyDevice.cpp:
	* KeySensor.h:
	* KeySensor.cpp:
	* X3DKeyDeviceSensorContext.h:
	* X3DKeyDeviceSensorContext.cpp: 

2014-05-29  Holger Seelig  <holger.seelig@yahoo.de>

	* TransformTool.x3dv: 
