@@ -1,5 +1,10 @@
 2014-05-31  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* SpiderMonkey.h:
+	* SpiderMonkey.cpp: 
+
+2014-05-31  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* jsContext.cpp: 
 
 2014-05-31  Holger Seelig  <holger.seelig@yahoo.de>
